talker.html: attempted to fix mic stop recording issue on iphone, minor adjustments to css, added "grace seconds" for recording
talker.html and index.html: now viewable in different languages

France.json: translated to different languages

--- a/css/global.css
+++ b/css/global.css
@@ -46,7 +46,7 @@ html, body {
 }
 
 #header-title {
-  font-size: 1.4rem;
+  font-size: 24px;
   margin: 0;
 }
 
@@ -79,8 +79,8 @@ color: var(--accent);
   background: var(--accent);
   color: white;
   border-radius: 50%;
-  width: 48px;
-  height: 48px;
+  width: 54px;
+  height: 54px;
   font-size: 1.25em;
   display: flex;
   align-items: center;
@@ -90,8 +90,8 @@ color: var(--accent);
 }
 
 .circle-btn img {
-  width: 36px;
-  height: 36px;
+  width: 42px;
+  height: 42px;
   object-fit: contain;
 }
 
