--- a/css/talker.css
+++ b/css/talker.css
@@ -442,6 +442,7 @@ label.disabled {
 
 #modeSelector {
   margin-right: auto;
+  font-size: 20px;
 }
 
 .mode-selector {
